--- a/views/admin/resources.ejs
+++ b/views/admin/resources.ejs
@@ -13,11 +13,9 @@
                         <p><strong>Genre:</strong> <%= resource.genre %></p>
                         <div class="buttons">
                             <a class="btn" href="/admin/edit-resource/<%= resource._id %>?edit=true">Edit</a>
-                            <form action="/admin/delete-resource" method="POST">
-                                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                                <input type="hidden" name="resourceId" value="<%= resource._id %>">
-                                <button type="submit" class="btn">Delete</button>
-                            </form>
+                            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                            <input type="hidden" name="resourceId" value="<%= resource._id %>">
+                            <button type="button" class="btn" onclick="deleteResource(this)">Delete</button>
                         </div>
                     </div>
                 <% }); %>
@@ -25,3 +23,4 @@
         <% } %>
     </main>
 <%- include('../includes/end.ejs') %>
+<script src="/js/admin.js"></script>
